syntax = "proto2";
package oneflow;

// There are deep learning models that could be divided into sequantial consecutive stages.
// Each stage is a set of ops
message StageContext {
  required int64 num_stages = 1;
  required int64 stage_id = 2;
  optional bool vertical_sync = 3 [default = false]; 
}
